--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap" rel="stylesheet" />
-        <link rel="icon" type="image/png" href="%PUBLIC_URL%/Images/ISOLOGO(1).png" />
+        <link rel="icon" type="image/png" href="%PUBLIC_URL%/ISOLOGO(1).png" />
 
         <!--
         manifest.json provides metadata used when your web app is installed on a
