--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,18 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&display=swap" rel="stylesheet" />
         <link rel="icon" type="image/png" href="/ISOLOGO.png" />
 
+        <!-- Open Graph (Facebook, WhatsApp, etc.) -->
+        <meta property="og:title" content="Astrotrén - Página Oficial" />
+        <meta property="og:image" content="%PUBLIC_URL%/Images/Isologo-blanco-fondo-negro.png" />
+        <meta property="og:url" content="https://astrotren.vercel.app/" />
+        <meta property="og:type" content="website" />
+
+        <!-- Twitter Card -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Astrotrén - Página Oficial" />
+        <meta name="twitter:image" content="%PUBLIC_URL%/Images/Isologo-blanco-fondo-negro.png" />
+
+
         <!--
         manifest.json provides metadata used when your web app is installed on a
         user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
