--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,14 +14,14 @@
 
         <!-- Open Graph (Facebook, WhatsApp, etc.) -->
         <meta property="og:title" content="Astrotrén - Página Oficial" />
-        <meta property="og:image" content="https://tusitio.com/Isologo-blanco-fondo-negro.png" />
-        <meta property="og:url" content="https://tusitio.com" />
+        <meta property="og:image" content="https://astrotren.vercel.app/Isologo-blanco-fondo-negro.png" />
+        <meta property="og:url" content="https://astrotren.vercel.app" />
         <meta property="og:type" content="website" />
 
         <!-- Twitter Card -->
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:title" content="Astrotrén - Página Oficial" />
-        <meta name="twitter:image" content="https://tusitio.com/Isologo-blanco-fondo-negro.png" />
+        <meta name="twitter:image" content="https://astrotren.vercel.app/Isologo-blanco-fondo-negro.png" />
 
         <!--
         manifest.json provides metadata used when your web app is installed on a
