--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,6 +14,7 @@
 
         <!-- Open Graph (Facebook, WhatsApp, etc.) -->
         <meta property="og:title" content="Astrotrén - Página Oficial" />
+        <meta property="og:description" content="" />
         <meta property="og:image" content="https://astrotren.vercel.app/Isologo-blanco-fondo-negro.png" />
         <meta property="og:url" content="https://astrotren.vercel.app" />
         <meta property="og:type" content="website" />
@@ -21,6 +22,7 @@
         <!-- Twitter Card -->
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:title" content="Astrotrén - Página Oficial" />
+        <meta name="twitter:description" content="" />
         <meta name="twitter:image" content="https://astrotren.vercel.app/Isologo-blanco-fondo-negro.png" />
 
         <!--
