--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,16 +13,18 @@
         <link rel="icon" type="image/png" href="/ISOLOGO.png" />
 
         <!-- Open Graph (Facebook, WhatsApp, etc.) -->
-        <meta property="og:title" content="Astrotrén - Página Oficial" />
-        <meta property="og:description" content="" />
-        <meta property="og:image" content="https://astrotren.vercel.app/Isologo-blanco-fondo-negro.png" />
-        <meta property="og:url" content="https://astrotren.vercel.app" />
-        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Astrotrén - Página Oficial"/>
+        <meta property="og:description" content="Heavy Metal desde Argentina"/>
+        <meta property="og:image" content="https://astrotren.vercel.app/Isologo-blanco-fondo-negro.png"/>
+        <meta property="og:url" content="https://astrotren.vercel.app"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:site_name" content="Astrotrén"/>
+        <meta property="og:locale" content="es_AR"/>
 
         <!-- Twitter Card -->
         <meta name="twitter:card" content="summary_large_image" />
         <meta name="twitter:title" content="Astrotrén - Página Oficial" />
-        <meta name="twitter:description" content="" />
+        <meta name="twitter:description" content="Heavy Metal desde Argentina" />
         <meta name="twitter:image" content="https://astrotren.vercel.app/Isologo-blanco-fondo-negro.png" />
 
         <!--
